<resources>
    <string name="app_name">Matte-Mester</string>
    <string name="appNavn">Mattespill</string>
    <string name="spill">Spill</string>
    <string name="statistikk">Statistikk</string>
    <string name="preferanser">Preferanser</string>
    <string name="spraak">Språk</string>
    <string name="forrige_spill">Forrige spill</string>
    <string name="resultater">Resultater</string>
    <string name="ingen_flere_tilgjengelige_sp_rsm_l">Ingen flere tilgjengelige spørsmål</string>
    <string name="antall_oppgaver_0">Antall oppgaver: 0</string>
    <string name="antall_riktige_svar_0">Antall riktige svar: 0</string>
    <string name="antall_feil_svar_0">Antall feil svar: 0</string>
    <string name="antallOppgaver">Antall oppgaver: </string>
    <string name="antallRiktigeSvar">Antall riktige svar: </string>
    <string name="antallFeilSvar">Antall feil svar: </string>
    <string name="antallSpill">Antall spill: "</string>
    <string name="hovedmeny">Hovedmeny</string>
    <string name="spill_p_nytt">Spill på nytt</string>
    <string name="antall_oppgaver_per_runde">Antall oppgaver per runde:</string>
    <string name="avslutt">Avslutt</string>
    <string name="oppgaver_vises_her">Oppgaver vises her</string>
    <string name="alle_spill">Alle spill</string>
    <string name="antall_spill_0">Antall spill: 0</string>
    <string name="nullstill">Nullstill</string>
    <string name="er_du_sikker">Er du sikker på at du vil nullstille?</string>
    <string name="er_du_sikker2">Er du sikker på at du vil avslutte?</string>
    <string name="ja">Ja</string>
    <string name="nei">Nei</string>
    <string name="positivTilbakemelding">Supert, dette kan du!</string>
    <string name="noytralTilbakemelding">Ikke verst, men prøv gjerne igjen!</string>
    <string name="motiverendeTilbakemelding">Ikke gi opp, øvelse gjør mester!</string>
    <string name="riktigSvarTilbakemelding">er riktig svar!</string>
    <string name="blanktSvarTilbakemelding">Du svarte blankt. \n Riktig svar var:</string>
    <string name="feilSvarTilbakemelding">er feil. \n Riktig svar var:</string>

</resources>