<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultatActivity"
    android:orientation="vertical"
    android:background="@drawable/tavle2">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/resultater"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/ingen_flere_tilgjengelige_sp_rsm_l" />

    <TextView
        android:id="@+id/antallOpgResTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/antall_oppgaver_0" />

    <TextView
        android:id="@+id/antRiktSvarResTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/antall_riktige_svar_0" />

    <TextView
        android:id="@+id/antFeilSvarResTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/antall_feil_svar_0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hovedmenyResButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:backgroundTint="#0AFFFFFF"
            android:text="@string/hovedmeny" />

        <Button
            android:id="@+id/spillPaaNyttResButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:backgroundTint="#0AFFFFFF"
            android:text="@string/spill_p_nytt" />
    </LinearLayout>
</LinearLayout>