<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tavle2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="102dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        app:srcCompat="@drawable/langikon" />

    <Button
        android:id="@+id/spillKnapp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/coming_soon"
        android:text="@string/spill"
        android:textSize="24sp" />

    <Button
        android:id="@+id/statistikkKnapp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/coming_soon"
        android:text="@string/statistikk"
        android:textSize="24sp" />

    <Button
        android:id="@+id/preferanseKnapp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/coming_soon"
        android:text="@string/preferanser"
        android:textSize="24sp" />

</LinearLayout>
